--- a/style.css
+++ b/style.css
@@ -49,12 +49,17 @@ header {
     font-size: 14px;
     line-height: 26px;
     margin-bottom: 30px;
-    background-color: #850af8;
     padding: 6px 20px;
     border: none;
     border-radius: 5px;
     align-items: center;
-    transition: .5s;
+    transition: ease-out 0.5s;
+    box-shadow: inset 0 0 0 0 red;
+    background-color: #850af8;
+}
+.title-btn:hover {
+    box-shadow: inset 300px 0 0 0 red;
+    transition: ease-out 0.5s;
 }
 
 .title-btn a {
@@ -76,10 +81,7 @@ header {
     margin-bottom: 0;
 }
 
-.title-btn:hover {
-    background-color: red;
-    transition: .5s;
-}
+
 
 
 /***************     Middle Section     ***************/
@@ -237,12 +239,15 @@ footer hr{
     margin: 0 auto;
     border: 1px solid rgb(102, 102, 102);
 }
-.footer-icon{
+.footer-icon {
     margin: 50px auto 30px auto;
     width: 85%;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    color: #B9B9B9;
+}
+.footer-icon a{
+    text-decoration: none;
+    color: #c2c2c2;
 }
 .footer-social-icon3 a{
     padding: 0 20px;
