--- a/style.css
+++ b/style.css
@@ -129,50 +129,6 @@ header {
     color: red;
 }
 
-
-
-/* This will change ++++++++++++++++++*/
-/* This will change ++++++++++++++++++*/
-.blog {
-    background-color: red;
-    color: white
-}
-
-.blog:hover a {
-    color: white;
-}
-
-
-/**********************************/
-/**********************************/
-.view-for-tablet {
-
-    display: none;
-
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 70px;
-}
-
-.view-for-tablet h3 {
-    margin: auto;
-    width: 120px;
-    font-weight: 500;
-    color: white;
-    background-color: red;
-    border-radius: 5px;
-}
-
-footer {
-    margin-top: 130px;
-}
-
-/* This will change ++++++++++++++++++*/
-/* This will change ++++++++++++++++++*/
-
-
-
 /*******************   Right Card    *****************/
 .right-card-parent {
     margin-left: 20px;
@@ -228,14 +184,14 @@ footer {
 /***************     Footer Section     ***************/
 footer {
     width: 100%;
-    height: 380px;
+    height: 350px;
     background-color: #161616;
     text-align: center;
     font-family: 'Mukta', sans-serif;
 }
 
 footer h1 {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 50px;
     color: white;
 }
@@ -269,9 +225,65 @@ footer hr {
 }
 
 .footer-social-icon3 a:hover {
-    color: rgb(193, 76, 240);
+    color: rgb(145, 2, 202);
 }
 
+
+
+
+/* This will be change ++++++++++++++++++*/
+/* This will be change ++++++++++++++++++*/
+.blog {
+    background-color: red;
+    color: white
+}
+
+.blog:hover a {
+    color: white;
+}
+
+
+/**********************************/
+/**********************************/
+.view-for-tablet {
+
+    display: none;
+
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 70px;
+}
+
+.view-for-tablet a {
+    margin: auto;
+    padding: 7px 50px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: ease-out 0.5s;
+    box-shadow: inset 0 0 0 0 rgb(106, 24, 160);
+    background-color: red;
+}
+.view-for-tablet a:hover{
+    border-radius: 5px;
+    transition: ease-out 0.5s;
+    box-shadow: inset 300px 0 0 0 rgb(106, 24, 160);
+}
+
+
+.view-for-tablet h3 {
+    padding: 7px 50px;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+}
+
+footer {
+    margin-top: 130px;
+}
+
+/* This will be change ++++++++++++++++++*/
+/* This will be change ++++++++++++++++++*/
 
 
 
@@ -289,24 +301,30 @@ footer hr {
     main {
         width: 95%;
     }
+
     header {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         text-align: center;
         margin-top: 15px;
     }
+
     .header-title-sec h1 {
         font-size: 55px;
     }
 
+    .header-title-sec p {
+        text-overflow: ellipsis;
+    }
+
     /************** Middle Section****************/
-    
+
     .middle-sec {
         margin-top: 20px;
         display: flex;
         flex-direction: column;
     }
-    
+
     .left-card-box {
         height: 180px;
         background-color: rgba(17, 102, 17, 0);
@@ -337,6 +355,7 @@ footer hr {
         text-align: center;
         font-family: 'Mukta', sans-serif;
     }
+
     footer h1 {
         padding-top: 20px;
         padding-bottom: 20px;
@@ -356,31 +375,48 @@ footer hr {
 /************** For Tablet **************/
 /************** For Tablet **************/
 
-@media only screen and (min-width:767px) and (max-width:1023) {
+@media only screen and (min-width: 767px) and (max-width: 1023px) {
 
     /************* Header Section ********************/
     main {
         width: 95%;
     }
+
     header {
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        text-align: center;
+        grid-template-columns: 1fr 1fr;
         margin-top: 15px;
     }
+
+    .header-title-sec {
+        margin: 0 0 0 5vw;
+    }
+
+    .header-img-sec {
+        margin: 0 5vw 0 5px;
+        position: bottom;
+    }
+
+    .header-img-sec img {
+        width: 110%;
+        margin-bottom: 0;
+    }
+
     .header-title-sec h1 {
-        font-size: 55px;
+        font-size: 50px;
     }
 
     /************** Middle Section****************/
-    
+
     .middle-sec {
         margin-top: 20px;
         display: flex;
         flex-direction: column;
     }
-    
+
     .left-card-box {
+        display: flex;
+        flex-direction: row;
         height: 180px;
         background-color: rgba(17, 102, 17, 0);
         margin-bottom: 30px;
@@ -397,7 +433,7 @@ footer hr {
     .right-card-parent {
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
         grid-gap: 10px;
     }
 
@@ -405,11 +441,12 @@ footer hr {
     footer {
         width: 100%;
         margin-top: 30px;
-        height: 490px;
+        height: 320px;
         background-color: #161616;
         text-align: center;
         font-family: 'Mukta', sans-serif;
     }
+
     footer h1 {
         padding-top: 20px;
         padding-bottom: 20px;
@@ -418,8 +455,21 @@ footer hr {
     .footer-icon {
         margin: 20px auto 30px auto;
         width: 85%;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px 50px;
+    }
+    .footer-icon p{
+        padding: 0 30px;
+
+    }
+
+    .view-for-tablet {
+        display: flex;    
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 70px;
     }
 }
