--- a/style.css
+++ b/style.css
@@ -32,22 +32,22 @@ header {
 .header-title-sec h1 {
     font-size: 70px;
     font-weight: 700;
-    line-height: 65px;
+    line-height: 75px;
     margin-bottom: 20px;
     color: white;
 }
 
-.header-title-sec p{
+.header-title-sec p {
     font-size: 16px;
     line-height: 26px;
     margin-bottom: 30px;
     color: #FFFFFF;
 }
 
-.for-ellips{
+.for-ellips {
     margin: 0 auto;
     display: none;
-    width: 500px;
+    width: 470px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -90,7 +90,6 @@ header {
 
 .header-img-sec img {
     width: 100%;
-    margin-bottom: 0;
 }
 
 
@@ -157,6 +156,7 @@ header {
 
 .card-info {
     margin-left: 20px;
+    margin-right: 10px;
 }
 
 .transfer {
@@ -275,7 +275,8 @@ footer hr {
     box-shadow: inset 0 0 0 0 rgb(106, 24, 160);
     background-color: red;
 }
-.view-for-tablet a:hover{
+
+.view-for-tablet a:hover {
     border-radius: 5px;
     transition: ease-out 0.5s;
     box-shadow: inset 300px 0 0 0 rgb(106, 24, 160);
@@ -288,6 +289,7 @@ footer hr {
     font-size: 20px;
     color: white;
 }
+
 /* This will be change ++++++++++++++++++*/
 /* This will be change ++++++++++++++++++*/
 
@@ -320,10 +322,11 @@ footer hr {
         font-size: 70px;
     }
 
-    .header-para{
+    .header-para {
         display: none;
     }
-    .for-ellips{
+
+    .for-ellips {
         display: block;
     }
 
@@ -380,7 +383,7 @@ footer hr {
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
     }
-    
+
 }
 
 
@@ -473,13 +476,14 @@ footer hr {
         justify-content: center;
         gap: 20px 50px;
     }
-    .footer-icon p{
+
+    .footer-icon p {
         padding: 0 30px;
 
     }
 
     .view-for-tablet {
-        display: flex;    
+        display: flex;
         margin: 0 auto;
         text-align: center;
         margin-top: 50px;
