--- a/style.css
+++ b/style.css
@@ -191,23 +191,64 @@ header {
 .right-card-upcoming{
     border: 1px solid #e7e6e6;
     border-radius: 7px;
-    margin: 0 auto;
+    margin: 10px auto;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
-    padding-bottom: 25px;
+    padding-bottom: 35px;
 }
 
 .upcoming-img{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1vw;
+    margin: 2vw;
 }
 
 .upcoming-img img{
-    width: 40%;
+    width: 50%;
 }
 
+.upcoming-img p{
+    margin: 0 10px;
+}
+.upcoming-info p{
+    margin-top: 5px;
+    color:#5f5f5f;
+}
+
+
+
+/************** Right Card for Upcoming Match    ******************/
+
+.group-name{
+    background-color: #ba2cfc;
+    width: 100%;
+    text-align: center;
+}
+.right-card-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gorup-flag{
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    margin: 7px auto;
+    align-items: center;
+    justify-content: center;
+}
+.gorup-flag img{
+    width: 100%;
+}
+.gorup-flag h1{
+    background-color: #0d25fd67;
+    font-size: 25px;
+    margin-left: 3px;
+    padding: 5px 10px;
+}
 
 /***************     Footer Section     ***************/
 /***************     Footer Section     ***************/
