--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ header {
 /************** Right Card for Upcoming Match    ******************/
 
 .group-name{
-    background-color: #ba2cfc;
+    background-color: #f75229;
     width: 100%;
     text-align: center;
 }
@@ -244,10 +244,10 @@ header {
     width: 100%;
 }
 .gorup-flag h1{
-    background-color: #0d25fd67;
+    background-color: #00fcefbd;
     font-size: 25px;
     margin-left: 3px;
-    padding: 5px 10px;
+    padding: 3px 10px;
 }
 
 /***************     Footer Section     ***************/
