--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ header {
     grid-template-columns: repeat(4, 1fr);
 }
 
+.card-icon-sec p:hover {
+color:red;
+}
+
 .card-icon-sec p {
     font-size: 13px;
     color: #424242;
@@ -219,8 +223,10 @@ header {
 
 
 
-/************** Right Card for Upcoming Match    ******************/
-
+/**************   Right Card for Group   ******************/
+.right-card-group{
+    margin-bottom: 10px;
+}
 .group-name{
     background-color: #f75229;
     width: 100%;
@@ -244,7 +250,7 @@ header {
     width: 100%;
 }
 .gorup-flag h1{
-    background-color: #00fcefbd;
+    background-color: #48f3eaaf;
     font-size: 25px;
     margin-left: 3px;
     padding: 3px 10px;
