--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* ******* fonts **************/
 @import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
 
+
 /******** Common Style ********/
 * {
     margin: 0;
@@ -70,7 +71,6 @@ header {
     padding-right: 60px;
     box-shadow: inset 360px 0 0 0 red;
     transition: ease-out 0.5s;
-
 }
 
 .title-btn a {
@@ -90,8 +90,6 @@ header {
 .header-img-sec img {
     width: 100%;
 }
-
-
 
 
 /***************     Middle Section     ***************/
@@ -183,7 +181,7 @@ header {
 }
 
 .card-icon-sec p:hover {
-color:red;
+    color: red;
 }
 
 .card-icon-sec p {
@@ -192,7 +190,7 @@ color:red;
 }
 
 /************** Right Card for Upcoming Match    ******************/
-.right-card-upcoming{
+.right-card-upcoming {
     border: 1px solid #e7e6e6;
     border-radius: 7px;
     margin: 10px auto;
@@ -202,44 +200,45 @@ color:red;
     padding-bottom: 35px;
 }
 
-.upcoming-img{
+.upcoming-img {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 2vw;
 }
 
-.upcoming-img img{
-    width: 50%;
+.upcoming-img img {
+    width: 45%;
 }
 
-.upcoming-img p{
+.upcoming-img p {
     margin: 0 10px;
 }
-.upcoming-info p{
+
+.upcoming-info p {
     margin-top: 5px;
-    color:#5f5f5f;
+    color: #5f5f5f;
 }
-
-
 
 /**************   Right Card for Group   ******************/
-.right-card-group{
+.right-card-group {
     margin-bottom: 10px;
 }
-.group-name{
+
+.group-name {
     background-color: #f75229;
     width: 100%;
     text-align: center;
 }
-.right-card-group{
+
+.right-card-group {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.gorup-flag{
+.gorup-flag {
     display: grid;
     grid-template-columns: 30% 1fr;
     margin: 7px auto;
@@ -247,10 +246,12 @@ color:red;
     justify-content: center;
     background-color: #48f3eaaf;
 }
-.gorup-flag img{
+
+.gorup-flag img {
     width: 100%;
 }
-.gorup-flag h1{
+
+.gorup-flag h1 {
     font-size: 25px;
     padding: 3px 10px;
     text-align: center;
@@ -309,14 +310,9 @@ footer hr {
     color: rgb(145, 2, 202);
 }
 
+/* This will be change +++++++++++++*/
+/* This will be change +++++++++++++*/
 
-
-/* This will be change ++++++++++++++++++*/
-/* This will be change ++++++++++++++++++*/
-
-
-/**********************************/
-/**********************************/
 .view-for-tablet {
     display: none;
     margin: 0 auto;
@@ -341,7 +337,6 @@ footer hr {
     box-shadow: inset 300px 0 0 0 rgb(106, 24, 160);
 }
 
-
 .view-for-tablet h3 {
     padding: 7px 50px;
     font-weight: 500;
@@ -349,16 +344,15 @@ footer hr {
     color: white;
 }
 
-/* This will be change ++++++++++++++++++*/
-/* This will be change ++++++++++++++++++*/
+/* This will be change>>> End <<< ++++++++++*/
+/* This will be change>>> End <<< ++++++++++*/
 
 
 
 
+/**************************     Media     *************************/
+/**************************     Media     *************************/
 
-/***************     Media     ***************/
-/***************     Media     ***************/
-/***************     Media     ***************/
 
 
 /************** For Mobile **************/
@@ -395,9 +389,7 @@ footer hr {
         padding-right: 100px;
         box-shadow: inset 360px 0 0 0 red;
         transition: ease-out 0.5s;
-    
     }
-
 
     /************** Middle Section****************/
 
@@ -454,7 +446,6 @@ footer hr {
 }
 
 
-
 /************** For Tablet **************/
 /************** For Tablet **************/
 
@@ -502,6 +493,7 @@ footer hr {
         flex-direction: row;
         height: 180px;
         background-color: rgba(17, 102, 17, 0);
+        gap: 15px;
         margin-bottom: 30px;
     }
 
