--- a/style.css
+++ b/style.css
@@ -34,8 +34,14 @@ header {
     font-size: 70px;
     font-weight: 700;
     line-height: 75px;
-    margin-bottom: 20px;
     color: white;
+}
+.header-title-sec h3 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: rgb(241, 19, 19);
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .header-title-sec p {
